--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Instadog</string>
+    <string name="title_activity_signup">Cadastrar</string>
+    <string name="title_activity_settings">Configurações</string>
     <string name="action_settings">Configurações</string>
     <string name="action_logout">Sair</string>
     <string name="login_etLogin">Usuário</string>
@@ -11,8 +13,15 @@
     <string name="signup_etPassword">Senha</string>
     <string name="signup_etRepeatPassword">Repetir senha</string>
     <string name="signup_btSignup">Cadastrar</string>
-    <string name="tab_home">Início</string>
-    <string name="tab_notifications">Notificações</string>
-    <string name="tab_following">Seguindo</string>
-    <string name="tab_followers">Seguidores</string>
+    <string name="pref_header_profile">Perfil</string>
+    <string name="pref_header_notifications">Notificações</string>
+    <string name="pref_title_photo_upload">Atualizar foto</string>
+    <string name="pref_title_name">Nome</string>
+    <string name="pref_title_email">E-mail</string>
+    <string name="pref_title_password">Nova senha</string>
+    <string name="pref_title_repeat_password">Repetir nova senha</string>
+    <string name="pref_title_save">Salvar</string>
+    <string name="pref_title_enable_notifications">Habilitar notificações</string>
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="photo_upload_select">Selecione arquivo</string>
 </resources>
